--- a/fast64_internal/f3d/node_library/ApplyFresnel.json
+++ b/fast64_internal/f3d/node_library/ApplyFresnel.json
@@ -7,40 +7,27 @@
 				115.9491,
 				10.0818
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
 			"label": "Fresnel to Alpha",
-			"node_tree": {
-				"serialized_type": "NodeTree",
-				"name": "MixValue"
-			},
 			"width": 140.0,
 			"inputs": {
 				"0": {
 					"name": "Fac",
-					"default_value": 0.5,
-					"enabled": true
+					"default_value": 0.5
 				},
 				"1": {
 					"name": "Input0",
 					"default_value": 0.5,
-					"enabled": true,
 					"hide_value": true
 				},
 				"2": {
 					"name": "Input1",
 					"default_value": 0.5,
-					"enabled": true,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Group Output",
@@ -56,32 +43,25 @@
 				-80.5831,
 				-45.0205
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
 			"label": "Color overrides Alpha",
 			"operation": "SUBTRACT",
 			"use_clamp": true,
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"default_value": 0.5,
-					"enabled": true
+					"default_value": 0.5
 				},
 				"1": {
-					"default_value": 0.5,
-					"enabled": true
+					"default_value": 0.5
 				},
 				"2": {
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": false
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -97,22 +77,14 @@
 				85.1312,
 				-124.4681
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -132,18 +104,12 @@
 				116.807,
 				193.8259
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
 			"label": "Fresnel to Color",
 			"width": 140.0,
 			"inputs": {
 				"0": {
 					"name": "Fac",
-					"default_value": 0.5,
-					"enabled": true
+					"default_value": 0.5
 				},
 				"1": {
 					"name": "Color1",
@@ -152,8 +118,7 @@
 						0.5,
 						0.5,
 						1.0
-					],
-					"enabled": true
+					]
 				},
 				"2": {
 					"name": "Color2",
@@ -162,14 +127,12 @@
 						0.5,
 						0.5,
 						1.0
-					],
-					"enabled": true
+					]
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Color",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Group Output",
@@ -185,22 +148,14 @@
 				84.1019,
 				37.3866
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -216,25 +171,16 @@
 				315.2231,
 				106.1039
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"is_active_output": true,
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"name": "Color",
-					"enabled": true
+					"name": "Color"
 				},
 				"1": {
-					"name": "Alpha",
-					"enabled": true
+					"name": "Alpha"
 				},
 				"2": {
-					"name": "",
-					"enabled": true
+					"name": ""
 				}
 			}
 		},
@@ -244,22 +190,14 @@
 				84.5865,
 				-204.1189
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.054",
@@ -275,22 +213,14 @@
 				-105.215,
 				-182.8108
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Math",
@@ -310,12 +240,6 @@
 				-141.0258,
 				60.5642
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
 					"name": "Input",
@@ -324,8 +248,7 @@
 						0.0,
 						0.0,
 						1.0
-					],
-					"enabled": true
+					]
 				}
 			},
 			"outputs": {
@@ -337,7 +260,6 @@
 						0.0,
 						1.0
 					],
-					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -353,22 +275,14 @@
 				-138.7407,
 				-103.9636
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -384,22 +298,14 @@
 				-104.9713,
 				81.9426
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
-			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input",
-					"enabled": true
+					"name": "Input"
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
-					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -415,11 +321,6 @@
 				-318.6995,
 				-80.7069
 			],
-			"color": [
-				0.6079999804496765,
-				0.6079999804496765,
-				0.6079999804496765
-			],
 			"width": 140.0,
 			"outputs": {
 				"0": {
@@ -430,7 +331,6 @@
 						0.5,
 						1.0
 					],
-					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute",
@@ -441,7 +341,6 @@
 				"1": {
 					"name": "Alpha",
 					"default_value": 0.5,
-					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -452,7 +351,6 @@
 				},
 				"2": {
 					"name": "G_FRESNEL_ALPHA",
-					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -464,7 +362,6 @@
 				"3": {
 					"name": "G_FRESNEL_COLOR",
 					"default_value": 1,
-					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -476,7 +373,6 @@
 				"4": {
 					"name": "Fresnel",
 					"default_value": 0.5,
-					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -484,10 +380,6 @@
 							"index": 0
 						}
 					]
-				},
-				"5": {
-					"name": "",
-					"enabled": true
 				}
 			}
 		}
@@ -547,7 +439,7 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "069e885ee17e92e4b9b0feadb1fe48f4",
+	"cached_hash": "16d821f4cc4ecf89b44c49d94e6d3acf",
 	"bpy_ver": [
 		3,
 		2,
